--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-emoticons": "^1.0.13",
     "react-native-smart-emoji-picker": "^0.1.2",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "shortid": "^2.2.14"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
